--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@koa/cors": "^3.1.0",
     "argon2": "^0.27.2",
     "crypto": "^1.0.1",
+    "ipfs-core": "^0.5.4",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-passport": "^4.1.4",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
+    "koa2-formidable": "^1.0.3",
     "mongoose": "^5.12.3",
     "passport-jwt": "^4.0.0"
   }
