--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,10 @@
       "env": {
         "JWT_SECRET": "ipfsSecretKey",
         "MONGO_URL": "mongodb+srv://jake:4Hy3feKuZKf1gnqe@cluster0.kgszi.mongodb.net/ipfsdb?retryWrites=true&w=majority",
-        "PORT": "3000"
+        "PORT": "3000",
+        "SENDGRID_API_KEY": "",
+        "SENDGRID_FROM": "gridmaniac@gmail.com",
+        "SENDGRID_DOMAIN": "http://localhost:8080"
       }
     }
   ]
