--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@sendgrid/mail": "^7.4.2",
     "argon2": "^0.27.2",
     "crypto": "^1.0.1",
     "ipfs-core": "^0.5.4",
